@@ -1,6 +1,7 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Add initdb.sh to create database from initial.sql script with prefix support (#1490188)
 - Plugin API: Add special onload() method to execute plugin actions before startup (session and GUI initialization)
 - Password plugin: Added 'kpasswd' driver by Peter Allgeyer
 - Add possibility to print contact information (of a single contact)
